--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button onclick="numHandler('.')">.</button>
         <button onclick="numHandler('0')">0</button>
         <button onclick="eqHandler()">=</button>
-        <button onclick="opHandler('')"></button>
+        <button onclick="opHandler('*')">*</button>
         
     </div>
     <button onclick="Clear()" id="clear">Clear</button>
